# Copyright 2019 The Crashpad Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache 2

cc_library(
    name = "snapshot",
    srcs = [
        "annotation_snapshot.cc",
        "capture_memory.cc",
        "cpu_context.cc",
        "crashpad_info_client_options.cc",
        "handle_snapshot.cc",
        "memory_snapshot.cc",
        "minidump/exception_snapshot_minidump.cc",
        "minidump/memory_snapshot_minidump.cc",
        "minidump/minidump_annotation_reader.cc",
        "minidump/minidump_simple_string_dictionary_reader.cc",
        "minidump/minidump_string_list_reader.cc",
        "minidump/minidump_string_reader.cc",
        "minidump/module_snapshot_minidump.cc",
        "minidump/process_snapshot_minidump.cc",
        "minidump/system_snapshot_minidump.cc",
        "minidump/thread_snapshot_minidump.cc",
        "unloaded_module_snapshot.cc",

        #
        "memory_map_region_snapshot.h",
    ] + [
        # if (crashpad_is_posix || crashpad_is_fuchsia)
        "posix/timezone.cc",
    ] + [
        # if (crashpad_is_mac)
        "mac/cpu_context_mac.cc",
        "mac/exception_snapshot_mac.cc",
        "mac/mach_o_image_annotations_reader.cc",
        "mac/mach_o_image_reader.cc",
        "mac/mach_o_image_segment_reader.cc",
        "mac/mach_o_image_symbol_table_reader.cc",
        "mac/module_snapshot_mac.cc",
        "mac/process_reader_mac.cc",
        "mac/process_snapshot_mac.cc",
        "mac/process_types.cc",
        "mac/process_types/all.inc",
        "mac/process_types/annotation.inc",
        "mac/process_types/crashpad_info.inc",
        "mac/process_types/crashreporterclient.inc",
        "mac/process_types/custom.cc",
        "mac/process_types/dyld_images.inc",
        "mac/process_types/loader.inc",
        "mac/process_types/nlist.inc",
        "mac/system_snapshot_mac.cc",
        "mac/thread_snapshot_mac.cc",
    ] + [
        # if (target_cpu == "x86" || target_cpu == "x64")
        "x86/cpuid_reader.cc",
    ],
    hdrs = [
        "annotation_snapshot.h",
        "capture_memory.h",
        "cpu_architecture.h",
        "cpu_context.h",
        "crashpad_info_client_options.h",
        "exception_snapshot.h",
        "handle_snapshot.h",
        "memory_snapshot.h",
        "memory_snapshot_generic.h",
        "minidump/exception_snapshot_minidump.h",
        "minidump/memory_snapshot_minidump.h",
        "minidump/minidump_annotation_reader.h",
        "minidump/minidump_simple_string_dictionary_reader.h",
        "minidump/minidump_stream.h",
        "minidump/minidump_string_list_reader.h",
        "minidump/minidump_string_reader.h",
        "minidump/module_snapshot_minidump.h",
        "minidump/process_snapshot_minidump.h",
        "minidump/system_snapshot_minidump.h",
        "minidump/thread_snapshot_minidump.h",
        "module_snapshot.h",
        "process_snapshot.h",
        "snapshot_constants.h",
        "system_snapshot.h",
        "thread_snapshot.h",
        "unloaded_module_snapshot.h",
    ] + [
        # if (crashpad_is_posix || crashpad_is_fuchsia)
        "posix/timezone.h",
    ] + [
        # if (crashpad_is_mac)
        "mac/cpu_context_mac.h",
        "mac/exception_snapshot_mac.h",
        "mac/mach_o_image_annotations_reader.h",
        "mac/mach_o_image_reader.h",
        "mac/mach_o_image_segment_reader.h",
        "mac/mach_o_image_symbol_table_reader.h",
        "mac/module_snapshot_mac.h",
        "mac/process_reader_mac.h",
        "mac/process_snapshot_mac.h",
        "mac/process_types.h",
        "mac/process_types/flavors.h",
        "mac/process_types/internal.h",
        "mac/process_types/traits.h",
        "mac/system_snapshot_mac.h",
        "mac/thread_snapshot_mac.h",
    ] + [
        # if (target_cpu == "x86" || target_cpu == "x64")
        "x86/cpuid_reader.h",
    ],
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        "//client",
        "//compat",
        "//minidump:minidump_context_h",
        "//minidump:minidump_extensions",
        "//third_party/mini_chromium:base",
        "//util",
    ],
)

cc_library(
    name = "test_support",
    testonly = True,
    srcs = [
        "test/test_cpu_context.cc",
        "test/test_exception_snapshot.cc",
        "test/test_memory_map_region_snapshot.cc",
        "test/test_memory_snapshot.cc",
        "test/test_module_snapshot.cc",
        "test/test_process_snapshot.cc",
        "test/test_system_snapshot.cc",
        "test/test_thread_snapshot.cc",
    ],
    hdrs = [
        "test/test_cpu_context.h",
        "test/test_exception_snapshot.h",
        "test/test_memory_map_region_snapshot.h",
        "test/test_memory_snapshot.h",
        "test/test_module_snapshot.h",
        "test/test_process_snapshot.h",
        "test/test_system_snapshot.h",
        "test/test_thread_snapshot.h",
    ],
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        ":snapshot",
        "//compat",
        "//test",
        "//test:gtest_main",
        "//third_party/mini_chromium:base",
        "//util",
    ],
)

cc_test(
    name = "crashpad_snapshot_test",
    srcs = [
        "cpu_context_test.cc",
        "memory_snapshot_test.cc",
        "minidump/process_snapshot_minidump_test.cc",
    ] + [
        # if (crashpad_is_mac)
        "mac/cpu_context_mac_test.cc",
        "mac/mach_o_image_annotations_reader_test.cc",
        "mac/mach_o_image_reader_test.cc",
        "mac/mach_o_image_segment_reader_test.cc",
        "mac/process_reader_mac_test.cc",
        "mac/process_types_test.cc",
        "mac/system_snapshot_mac_test.cc",
    ] + [
        # if (!crashpad_is_linux && !crashpad_is_android)
        # "crashpad_info_client_options_test.cc"
    ] + [
        # if (!crashpad_is_fuchsia)
        "posix/timezone_test.cc",
    ],
    data = [
        # ":crashpad_snapshot_test_module.so",
        ":crashpad_snapshot_test_module_small.so",
        ":crashpad_snapshot_test_module_large.so",
    ] + [
        # if (crashpad_is_mac)
        ":crashpad_snapshot_test_module_crashy_initializer.so",
        ":crashpad_snapshot_test_no_op",
    ],
    deps = [
        ":test_support",
        "//client",
        "//compat",
        "//test",
        "//third_party/mini_chromium:base",
        "//util",
        "@gtest",
    ],
)

cc_binary(
    name = "crashpad_snapshot_test_module_crashy_initializer.so",
    testonly = True,
    srcs = [
        "mac/mach_o_image_annotations_reader_test_module_crashy_initializer.cc",
    ],
    linkshared = True,
    linkstatic = 1,
)

cc_binary(
    name = "crashpad_snapshot_test_no_op",
    testonly = True,
    srcs = [
        "mac/mach_o_image_annotations_reader_test_no_op.cc",
    ],
)

# cc_binary(
#     name = "crashpad_snapshot_test_module.so",
#     testonly = True,
#     srcs = [
#         "crashpad_info_client_options_test_module.cc",
#     ],
#     linkshared = True,
#     linkstatic = 1,
#     deps = [
#         "//client",
#         "//third_party/mini_chromium:base",
#     ],
# )

cc_binary(
    name = "crashpad_snapshot_test_module_large.so",
    testonly = True,
    srcs = [
        "crashpad_info_size_test_module.cc",
    ],
    defines = [
        "CRASHPAD_INFO_SIZE_TEST_MODULE_LARGE",
    ],
    linkshared = True,
    linkstatic = 1,
    deps = [
        "//third_party/mini_chromium:base",
    ],
)

cc_binary(
    name = "crashpad_snapshot_test_module_small.so",
    testonly = True,
    srcs = [
        "crashpad_info_size_test_module.cc",
    ],
    defines = [
        "CRASHPAD_INFO_SIZE_TEST_MODULE_SMALL",
    ],
    linkshared = True,
    linkstatic = 1,
    deps = [
        "//third_party/mini_chromium:base",
    ],
)
