# Copyright 2016 The Crashpad Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("test") {
  sources = [
    "errors.cc",
    "errors.h",
    "file.cc",
    "file.h",
    "gtest_death_check.h",
    "mac/dyld.h",
    "mac/mach_errors.cc",
    "mac/mach_errors.h",
    "mac/mach_multiprocess.cc",
    "mac/mach_multiprocess.h",
    "multiprocess.h",
    "multiprocess_exec.h",
    "multiprocess_exec_posix.cc",
    "multiprocess_exec_win.cc",
    "multiprocess_posix.cc",
    "paths.cc",
    "paths.h",
    "paths_linux.cc",
    "paths_mac.cc",
    "paths_win.cc",
    "scoped_temp_dir.cc",
    "scoped_temp_dir.h",
    "scoped_temp_dir_posix.cc",
    "scoped_temp_dir_win.cc",
    "win/child_launcher.cc",
    "win/child_launcher.h",
    "win/win_child_process.cc",
    "win/win_child_process.h",
    "win/win_multiprocess.cc",
    "win/win_multiprocess.h",
  ]

  if (is_android) {
    sources += [ "paths_linux.cc" ]
  }

  deps = [
    "//compat",
    "//third_party/gtest:gtest",
    "//third_party/mini_chromium/mini_chromium/base",
    "//util",
  ]

  public_configs = [ "//build:include_dirs" ]

  if (is_mac) {
    libs = [ "bsm" ]
  } else if (is_win) {
    libs = [ "shell32.lib" ]
  }
}

executable("test_test") {
  output_name = "crashpad_test_test"

  sources = [
    "mac/mach_multiprocess_test.cc",
    "multiprocess_exec_test.cc",
    "multiprocess_posix_test.cc",
    "paths_test.cc",
    "scoped_temp_dir_test.cc",
    "win/win_child_process_test.cc",
    "win/win_multiprocess_test.cc",
  ]

  deps = [
    ":test",
    "//third_party/gtest:gmock",
    "//third_party/gtest:gmock_main",
    "//third_party/gtest:gtest",
    "//third_party/mini_chromium/mini_chromium/base",
  ]

  data_deps = [
    ":crashpad_test_test_multiprocess_exec_test_child",
  ]
}

executable("crashpad_test_test_multiprocess_exec_test_child") {
  sources = [
    "multiprocess_exec_test_child.cc",
  ]
}
