# Copyright 2019 The Crashpad Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache 2

cc_library(
    name = "tool_support",
    srcs = [
        "tool_support.cc",
    ],
    hdrs = [
        "tool_support.h",
    ],
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        "//:package",
        "//third_party/mini_chromium:base",
    ],
)

cc_binary(
    name = "crashpad_database_util",
    srcs = [
        "crashpad_database_util.cc",
    ],
    deps = [
        ":tool_support",
        # "//build:default_exe_manifest_win",
        "//client",
        "//compat",
        "//third_party/mini_chromium:base",
        "//util",
    ],
)

cc_binary(
    name = "run_with_crashpad",
    srcs = [
        "run_with_crashpad.cc",
    ],
    deps = [
        ":tool_support",
        "//client",
        "//compat",
        "//third_party/mini_chromium:base",
        "//util",
    ],
)
