# Copyright 2016 The Crashpad Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config("mig_public_config") {
  include_dirs = [ "$target_gen_dir/.." ]
}

action_foreach("mig") {
  visibility = [ ":*" ]

  script = "mach/mig.py"

  sources = [
    "/usr/include/mach/exc.defs",
    "/usr/include/mach/mach_exc.defs",
    "/usr/include/mach/notify.defs",
    "mach/child_port.defs",
  ]

  outputs = [
    "$target_gen_dir/mach/{{source_name_part}}User.c",
    "$target_gen_dir/mach/{{source_name_part}}Server.c",
    "$target_gen_dir/mach/{{source_name_part}}.h",
    "$target_gen_dir/mach/{{source_name_part}}Server.h",
  ]

  args = [ "{{source}}" ] + rebase_path(outputs)

  public_configs = [ ":mig_public_config" ]
}

static_library("util") {
  sources = [
    "file/file_io.cc",
    "file/file_io.h",
    "file/file_io_posix.cc",
    "file/file_io_win.cc",
    "file/file_reader.cc",
    "file/file_reader.h",
    "file/file_seeker.cc",
    "file/file_seeker.h",
    "file/file_writer.cc",
    "file/file_writer.h",
    "file/string_file.cc",
    "file/string_file.h",
    "mac/checked_mach_address_range.h",
    "mac/launchd.h",
    "mac/launchd.mm",
    "mac/mac_util.cc",
    "mac/mac_util.h",
    "mac/service_management.cc",
    "mac/service_management.h",
    "mac/xattr.cc",
    "mac/xattr.h",
    "mach/child_port_handshake.cc",
    "mach/child_port_handshake.h",
    "mach/child_port_server.cc",
    "mach/child_port_server.h",
    "mach/child_port_types.h",
    "mach/composite_mach_message_server.cc",
    "mach/composite_mach_message_server.h",
    "mach/exc_client_variants.cc",
    "mach/exc_client_variants.h",
    "mach/exc_server_variants.cc",
    "mach/exc_server_variants.h",
    "mach/exception_behaviors.cc",
    "mach/exception_behaviors.h",
    "mach/exception_ports.cc",
    "mach/exception_ports.h",
    "mach/exception_types.cc",
    "mach/exception_types.h",
    "mach/mach_extensions.cc",
    "mach/mach_extensions.h",
    "mach/mach_message.cc",
    "mach/mach_message.h",
    "mach/mach_message_server.cc",
    "mach/mach_message_server.h",
    "mach/notify_server.cc",
    "mach/notify_server.h",
    "mach/scoped_task_suspend.cc",
    "mach/scoped_task_suspend.h",
    "mach/symbolic_constants_mach.cc",
    "mach/symbolic_constants_mach.h",
    "mach/task_for_pid.cc",
    "mach/task_for_pid.h",
    "mach/task_memory.cc",
    "mach/task_memory.h",
    "misc/arraysize_unsafe.h",
    "misc/clock.h",
    "misc/clock_mac.cc",
    "misc/clock_posix.cc",
    "misc/clock_win.cc",
    "misc/implicit_cast.h",
    "misc/initialization_state.h",
    "misc/initialization_state_dcheck.cc",
    "misc/initialization_state_dcheck.h",
    "misc/metrics.cc",
    "misc/metrics.h",
    "misc/pdb_structures.cc",
    "misc/pdb_structures.h",
    "misc/random_string.cc",
    "misc/random_string.h",
    "misc/scoped_forbid_return.cc",
    "misc/scoped_forbid_return.h",
    "misc/symbolic_constants_common.h",
    "misc/tri_state.h",
    "misc/uuid.cc",
    "misc/uuid.h",
    "net/http_body.cc",
    "net/http_body.h",
    "net/http_headers.cc",
    "net/http_headers.h",
    "net/http_multipart_builder.cc",
    "net/http_multipart_builder.h",
    "net/http_transport.cc",
    "net/http_transport.h",
    "net/http_transport_mac.mm",
    "net/http_transport_win.cc",
    "numeric/checked_address_range.cc",
    "numeric/checked_address_range.h",
    "numeric/checked_range.h",
    "numeric/in_range_cast.h",
    "numeric/int128.h",
    "numeric/safe_assignment.h",
    "posix/close_multiple.cc",
    "posix/close_multiple.h",
    "posix/close_stdio.cc",
    "posix/close_stdio.h",
    "posix/drop_privileges.cc",
    "posix/drop_privileges.h",
    "posix/process_info.h",
    "posix/process_info_mac.cc",
    "posix/symbolic_constants_posix.cc",
    "posix/symbolic_constants_posix.h",
    "stdlib/aligned_allocator.cc",
    "stdlib/aligned_allocator.h",
    "stdlib/cxx.h",
    "stdlib/map_insert.h",
    "stdlib/objc.h",
    "stdlib/pointer_container.h",
    "stdlib/string_number_conversion.cc",
    "stdlib/string_number_conversion.h",
    "stdlib/strlcpy.cc",
    "stdlib/strlcpy.h",
    "stdlib/strnlen.cc",
    "stdlib/strnlen.h",
    "string/split_string.cc",
    "string/split_string.h",
    "synchronization/semaphore.h",
    "synchronization/semaphore_mac.cc",
    "synchronization/semaphore_posix.cc",
    "synchronization/semaphore_win.cc",
    "thread/thread.cc",
    "thread/thread.h",
    "thread/thread_log_messages.cc",
    "thread/thread_log_messages.h",
    "thread/thread_posix.cc",
    "thread/thread_win.cc",
    "thread/worker_thread.cc",
    "thread/worker_thread.h",
    "win/address_types.h",
    "win/capture_context.asm",
    "win/capture_context.h",
    "win/checked_win_address_range.h",
    "win/command_line.cc",
    "win/command_line.h",
    "win/critical_section_with_debug_info.cc",
    "win/critical_section_with_debug_info.h",
    "win/exception_handler_server.cc",
    "win/exception_handler_server.h",
    "win/get_function.cc",
    "win/get_function.h",
    "win/get_module_information.cc",
    "win/get_module_information.h",
    "win/handle.cc",
    "win/handle.h",
    "win/initial_client_data.cc",
    "win/initial_client_data.h",
    "win/module_version.cc",
    "win/module_version.h",
    "win/nt_internals.cc",
    "win/nt_internals.h",
    "win/ntstatus_logging.cc",
    "win/ntstatus_logging.h",
    "win/process_info.cc",
    "win/process_info.h",
    "win/process_structs.h",
    "win/registration_protocol_win.cc",
    "win/registration_protocol_win.h",
    "win/scoped_handle.cc",
    "win/scoped_handle.h",
    "win/scoped_local_alloc.cc",
    "win/scoped_local_alloc.h",
    "win/scoped_process_suspend.cc",
    "win/scoped_process_suspend.h",
    "win/termination_codes.h",
    "win/time.cc",
    "win/time.h",
    "win/xp_compat.h",
  ]

  deps = [
    "//compat",
    "//third_party/mini_chromium/mini_chromium/base",
  ]

  public_configs = [ "//build:include_dirs" ]

  if (is_mac) {
    sources += get_target_outputs("//util:mig")

    deps += [ ":mig" ]

    libs = [
      "CoreFoundation.framework",
      "Foundation.framework",
      "IOKit.framework",
      "bsm",
    ]
  } else if (is_win) {
    libs = [
      "advapi32.lib",
      "rpcrt4.lib",
      "winhttp.lib",
    ]
  }
}

executable("util_test") {
  output_name = "crashpad_util_test"

  sources = [
    "file/file_io_test.cc",
    "file/string_file_test.cc",
    "mac/launchd_test.mm",
    "mac/mac_util_test.mm",
    "mac/service_management_test.mm",
    "mac/xattr_test.cc",
    "mach/child_port_handshake_test.cc",
    "mach/child_port_server_test.cc",
    "mach/composite_mach_message_server_test.cc",
    "mach/exc_client_variants_test.cc",
    "mach/exc_server_variants_test.cc",
    "mach/exception_behaviors_test.cc",
    "mach/exception_ports_test.cc",
    "mach/exception_types_test.cc",
    "mach/mach_extensions_test.cc",
    "mach/mach_message_server_test.cc",
    "mach/mach_message_test.cc",
    "mach/notify_server_test.cc",
    "mach/scoped_task_suspend_test.cc",
    "mach/symbolic_constants_mach_test.cc",
    "mach/task_memory_test.cc",
    "misc/arraysize_unsafe_test.cc",
    "misc/clock_test.cc",
    "misc/initialization_state_dcheck_test.cc",
    "misc/initialization_state_test.cc",
    "misc/random_string_test.cc",
    "misc/scoped_forbid_return_test.cc",
    "misc/uuid_test.cc",
    "net/http_body_test.cc",
    "net/http_body_test_util.cc",
    "net/http_body_test_util.h",
    "net/http_multipart_builder_test.cc",
    "net/http_transport_test.cc",
    "numeric/checked_address_range_test.cc",
    "numeric/checked_range_test.cc",
    "numeric/in_range_cast_test.cc",
    "numeric/int128_test.cc",
    "posix/process_info_test.cc",
    "posix/symbolic_constants_posix_test.cc",
    "stdlib/aligned_allocator_test.cc",
    "stdlib/map_insert_test.cc",
    "stdlib/string_number_conversion_test.cc",
    "stdlib/strlcpy_test.cc",
    "stdlib/strnlen_test.cc",
    "string/split_string_test.cc",
    "synchronization/semaphore_test.cc",
    "thread/thread_log_messages_test.cc",
    "thread/thread_test.cc",
    "thread/worker_thread_test.cc",
    "win/capture_context_test.cc",
    "win/command_line_test.cc",
    "win/critical_section_with_debug_info_test.cc",
    "win/exception_handler_server_test.cc",
    "win/get_function_test.cc",
    "win/handle_test.cc",
    "win/initial_client_data_test.cc",
    "win/process_info_test.cc",
    "win/scoped_process_suspend_test.cc",
    "win/time_test.cc",
  ]

  deps = [
    ":util",
    "//compat",
    "//test",
    "//third_party/gtest:gmock",
    "//third_party/gtest:gmock_main",
    "//third_party/gtest:gtest",
    "//third_party/mini_chromium/mini_chromium/base",
  ]

  if (is_mac) {
    libs = [ "Foundation.framework" ]
  } else if (is_win) {
    libs = [
      "imagehlp.lib",
      "rpcrt4.lib",
    ]
  }
}
